doc: javascript is dumb

--- a/.spec-driver/registry/backlog.yaml
+++ b/.spec-driver/registry/backlog.yaml
@@ -1,16 +1,26 @@
 ordering:
+- ISSUE-003
+- ISSUE-009
+- ISSUE-010
+- ISSUE-011
 - ISSUE-005
 - ISSUE-006
 - ISSUE-004
 - ISSUE-007
 - ISSUE-008
-- ISSUE-003
-- ISSUE-009
-- ISSUE-010
-- ISSUE-011
 - ISSUE-012
 - ISSUE-013
 - ISSUE-014
 - ISSUE-015
 - ISSUE-016
 - ISSUE-017
+- ISSUE-021
+- ISSUE-019
+- ISSUE-020
+- ISSUE-022
+- ISSUE-018
+- ISSUE-023
+- ISSUE-024
+- IMPR-001
+- IMPR-002
+- PROB-001
